--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -19,7 +19,9 @@
             	<div id="navMenu" class="navbar-menu">
 	                <div class="navbar-start">
     	                <a class="navbar-item" href="#" th:href="@{/home}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/home') ? 'is-active':''}">Home</a>
-        	            <a class="navbar-item" href="#" th:href="@{/rooms}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/rooms') ? 'is-active': #httpServletRequest.getRequestURI().startsWith('/reservations') ? 'is-active':''}">Rooms</a>
+        	            <a class="navbar-item" href="#" th:href="@{/reservations/rooms}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/reservations') ? 'is-active':''}">Reservations</a>
+    	                <a class="navbar-item" href="#" th:href="@{/rooms}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/rooms') ? 'is-active':''}">Rooms</a>
+    	                <a class="navbar-item" href="#" th:href="@{/accounts}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/acconts') ? 'is-active':''}">Accounts</a>
                 	</div>
 	            	<div class="navbar-end">
     	        		<div class="navbar-item has-dropdown is-hoverable">
