--- a/src/main/resources/templates/reservation/listRooms.html
+++ b/src/main/resources/templates/reservation/listRooms.html
@@ -8,9 +8,9 @@
 <body>
 	<div class="container">
 		<h3>会議室</h3>
-		<a th:href="@{'/rooms/' + ${date.minusDays(1)}}">&lt; 前日</a>
+		<a th:href="@{'/reservations/rooms/' + ${date.minusDays(1)}}">&lt; 前日</a>
 		<span th:text="|${#temporals.format(date, 'yyyy/M/d')}の会議室|">2016/5/20の会議室</span>
-		<a th:href="@{'/rooms/' + ${date.plusDays(1)}}">翌日 &gt;</a>
+		<a th:href="@{'/reservations/rooms/' + ${date.plusDays(1)}}">翌日 &gt;</a>
 		<ul>
 			<li th:each="room: ${rooms}">
 				<a th:href="@{'/reservations/' + ${date} + '/' + ${room.meetingRoom.roomId}}"
