--- a/src/main/resources/templates/reservation/reserveForm.html
+++ b/src/main/resources/templates/reservation/reserveForm.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<div>
-			<a th:href="@{'/rooms/' + ${date}}">会議室一覧へ</a>
+			<a th:href="@{'/reservations/rooms/' + ${date}}">会議室一覧へ</a>
 		</div>
 		<p style="color: red" th:if="${error != null}" th:text="${error}"></p>
 		<form th:object="${reservationForm}"
@@ -43,13 +43,13 @@
 			</tr>
 			<tr th:each="reservation : ${reservations}">
 				<td>
-					<span th:text="${reservation.startTime}" />
+					<span th:text="${reservation.startTime}" ></span>
 					-
-					<span th:text="${reservation.endTime}" />
+					<span th:text="${reservation.endTime}" ></span>
 				</td>
 				<td>
-					<span th:text="${reservation.user.lastName}" />
-					<span th:text="${reservation.user.firstName}" />
+					<span th:text="${reservation.user.firstName}" ></span>
+					<span th:text="${reservation.user.lastName}" ></span>
 				</td>
 				<td>
 					<form th:action="@{'/reservations/' + ${date} + '/' + ${roomId}}"
