--- a/src/main/resources/templates/user/new.html
+++ b/src/main/resources/templates/user/new.html
@@ -21,6 +21,7 @@
 					<div class="control">
 						<input type="text" class="form-control input" id="userId" name="userId" style="width: 200px;">
 					</div>
+					<p th:if="${#fields.hasErrors('*{userId}')}" th:errors="*{userId}" class="help is-danger"></p>
 				</div>
 	  			<div class="field">
 					<label class="label">ユーザ名</label>
@@ -28,12 +29,15 @@
 						<input type="text" class="form-control input" id="firstName" name="firstName" style="width: 200px;" placeholder="姓">
 						<input type="text" class="form-control input" id="lastName" name="lastName" style="width: 200px;" placeholder="名">
 					</div>
+					<p th:if="${#fields.hasErrors('*{firstName}')}" th:errors="*{firstName}" class="help is-danger"></p>
+					<p th:if="${#fields.hasErrors('*{lastName}')}" th:errors="*{lastName}" class="help is-danger"></p>
 				</div>
 	  			<div class="field">
 					<label class="label">パスワード</label>
 					<div class="control">
 						<input type="password" class="form-control input" id="password" name="password" style="width: 200px;">
 					</div>
+					<p th:if="${#fields.hasErrors('*{password}')}" th:errors="*{password}" class="help is-danger"></p>
 				</div>
 				<div class="control">
 					<label class="label">ロール</label>
