--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -19,7 +19,7 @@
             	<div id="navMenu" class="navbar-menu">
 	                <div class="navbar-start">
     	                <a class="navbar-item" href="#" th:href="@{/home}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/home') ? 'is-active':''}">Home</a>
-        	            <a class="navbar-item" href="#" th:href="@{/reservations/rooms}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/reservations') ? 'is-active':''}">Reservations</a>
+        	            <a class="navbar-item" href="#" th:href="@{/reservations}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/reservations') ? 'is-active':''}">Reservations</a>
     	                <a class="navbar-item" href="#" >Rooms</a>
     	                <a class="navbar-item" href="#" th:href="@{/users}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/users') ? 'is-active':''}">Users</a>
                 	</div>
