画面文言変更

--- a/src/main/resources/templates/reservation/edit.html
+++ b/src/main/resources/templates/reservation/edit.html
@@ -67,7 +67,7 @@
   						</p>
   						<p class="control">
     						<a class="button is-link is-light" href="#" th:href="@{'/reservations'}">
-      						会議室一覧へ
+      						予約一覧へ
     						</a>
   						</p>
 					</div>
