--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -9,7 +9,7 @@
     	<nav class="navbar is-primary">
         	<div class="container">
             	<div class="navbar-brand">
-                	<a class="navbar-item brand-text" href="#">Spring Boot Example</a>
+                	<a class="navbar-item brand-text" href="#">Spring Boot Practice</a>
                 	<a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
 	                    <span aria-hidden="true"></span>
     	                <span aria-hidden="true"></span>
