--- a/src/main/resources/templates/reservation/edit.html
+++ b/src/main/resources/templates/reservation/edit.html
@@ -12,67 +12,75 @@
 		<div class="control">
 			<p style="color: red; font-weight: bold;" th:if="${error != null}" th:text="${error}"></p>
 		</div>
-				<div>
-					<form th:object="${reservationEditForm}"
-			  			th:action="@{/reservations/{reservationId}/edit(reservationId=${reservation.reservationId})}"
-		  				method="post" name="form">
-		  				<div class="field">
-	  						<label class="label">会議室</label>
-  							<div class="control">
-							<div class="select">
-								<select name="roomId">
-									<option th:each="room : ${rooms}" th:text="${room.roomName}" th:value="${room.roomId}" th:selected="${reservation.meetingRoom.roomId == room.roomId}"></option>
-								</select>
-								<span th:if="${#fields.hasErrors('roomId')}" th:errors="*{roomId}" style="color: red">error!</span>
-							</div>
-  							</div>
-						</div>
-			  			<div class="field">
-  							<label class="label">予約日</label>
-  							<div class="control">
-    							<input type="text" class="form-control input" id="reservedDate" name="reservedDate" style="width: 200px;" th:value="${#temporals.format(reservation.reservedDate, 'yyyy/MM/dd')}">
-  							</div>
-						</div>
-			  			<div class="field">
-  							<label class="label">予約者</label>
-  							<div class="control">
-    							<span th:text="|${reservation.user.firstName} ${reservation.user.lastName}|"></span>
-  							</div>
-						</div>
-						<div class="control">
-							<label class="label">時間帯</label>
-							<div class="select">
-								<select name="startTime">
-									<option th:each="time : ${timeList}" th:text="${time.toString()}" th:value="${time}" th:selected="${reservation.startTime.toString() == time.toString()}"></option>
-								</select>
-							</div>
-							<span>-</span>
-							<div class="select">
-								<select name="endTime">
-									<option th:each="time : ${timeList}" th:text="${time}" th:value="${time}" th:selected="${reservation.endTime.toString() == time.toString()}">10:00</option>
-								</select>
-							</div>
-						</div>
-						<span th:if="${#fields.hasErrors('startTime')}" th:errors="*{startTime}" style="color: red">error!</span>
-						<span th:if="${#fields.hasErrors('endTime')}" th:errors="*{endTime}" style="color: red">error!</span>
-						<input type="hidden" id="reservationId" name="reservationId" th:value="${reservation.reservationId}">
-					</form>
+		<div>
+			<form th:object="${reservationEditForm}"
+	    			th:action="@{/reservations/{reservationId}/edit(reservationId=${reservation.reservationId})}"
+	 				method="post" name="form">
+				<div class="field">
+	  				<label class="label">会議室</label>
+  					<div class="control">
+					<div class="select">
+						<select name="roomId">
+							<option th:each="room : ${rooms}" th:text="${room.roomName}" th:value="${room.roomId}" th:selected="${reservation.meetingRoom.roomId == room.roomId}"></option>
+						</select>
+						<span th:if="${#fields.hasErrors('roomId')}" th:errors="*{roomId}" style="color: red">error!</span>
+					</div>
+  					</div>
 				</div>
-				<div style="margin-top: 20px;">
-					<div class="field is-grouped">
-  						<p class="control">
-    						<a class="button is-primary is-light" href="#" onclick="javascript:form.submit();">
-      						変更
-    						</a>
-  						</p>
-  						<p class="control">
-    						<a class="button is-link is-light" href="#" th:href="@{'/reservations'}">
-      						予約一覧へ
-    						</a>
-  						</p>
+				<div class="field">
+  					<label class="label">予約日</label>
+  					<div class="control">
+    					<input type="text" class="form-control input" id="reservedDate" name="reservedDate" style="width: 200px;" th:value="${#temporals.format(reservation.reservedDate, 'yyyy/MM/dd')}">
+  					</div>
+				</div>
+	  			<div class="field">
+					<label class="label">予約者</label>
+					<div class="control">
+						<span th:text="|${reservation.user.firstName} ${reservation.user.lastName}|"></span>
 					</div>
 				</div>
+				<div class="control">
+					<label class="label">時間帯</label>
+					<div class="select">
+						<select name="startTime">
+							<option th:each="time : ${timeList}" th:text="${time.toString()}" th:value="${time}" th:selected="${reservation.startTime.toString() == time.toString()}"></option>
+						</select>
+					</div>
+					<span>-</span>
+					<div class="select">
+						<select name="endTime">
+							<option th:each="time : ${timeList}" th:text="${time}" th:value="${time}" th:selected="${reservation.endTime.toString() == time.toString()}">10:00</option>
+						</select>
+					</div>
+				</div>
+				<span th:if="${#fields.hasErrors('startTime')}" th:errors="*{startTime}" style="color: red">error!</span>
+				<span th:if="${#fields.hasErrors('endTime')}" th:errors="*{endTime}" style="color: red">error!</span>
+				<input type="hidden" id="reservationId" name="reservationId" th:value="${reservation.reservationId}">
+			</form>
+		</div>
+		<div style="margin-top: 20px;">
+			<div class="field is-grouped">
+				<p class="control">
+    				<a class="button is-primary is-light" href="#" onclick="javascript:form.submit();">
+    				変更
+    				</a>
+  				</p>
+  				<p class="control">
+    				<a class="button is-link is-light" href="#" th:href="@{'/reservations'}">
+    				予約一覧へ
+    				</a>
+  				</p>
 			</div>
-
+		</div>
+	</div>
+	<script>
+		var picker = new Pikaday({
+	    	field: document.getElementById('reservedDate'),
+    		format: 'YYYY/MM/DD',
+    		onSelect: function() {
+        		console.log(this.getMoment().format('YYYY/MM/DD'));
+    		}
+		});
+	</script>
 </body>
 </html>
