--- a/src/main/resources/templates/reservation/list.html
+++ b/src/main/resources/templates/reservation/list.html
@@ -21,6 +21,9 @@
     						</a>
   						</p>
 					</div>
+					<div class="field" id="pagination-info">
+						<label class="label" th:text="|Total ${page.totalElements} results  Page ${page.number + 1} of ${page.totalPages}|"></label>
+					</div>
 					<table class="table">
 						<tr>
 							<th>予約日</th>
@@ -52,6 +55,32 @@
 		  		</form>
 		  	</div>
 		</div>
+        <nav th:if="${page.totalPages > 0}" th:fragment='paginationbar' class="pagination" role="navigation" aria-label="pagination">
+            <ul class="pagination-list">
+                <li th:class="${page.first} ? 'disabled':''" style="display:inline">
+                    <span class="pagination-link" th:if="${page.first}" disabled>&laquo;</span>
+                    <a class="pagination-link" th:if="${not page.first}" th:href="@{${url}(page=0)}">&laquo;</a>
+                </li>
+                <li th:class="${page.first} ? 'disabled':''" style="display:inline">
+                    <span class="pagination-link" th:if="${page.first}" disabled>&lsaquo;</span>
+                    <a class="pagination-link" th:if="${not page.first}" th:href="@{${url}(page=(${page.number}-1))}">&lsaquo;</a>
+                </li>
+                <li th:each='i : ${#numbers.sequence(0, page.totalPages-1)}' th:class="(${i}==${page.number})? 'active' : ''" style="display:inline">
+                    <span class="pagination-link is-current" th:if='${i}==${page.number}' th:text='${i+1}'>1</span>
+                    <a class="pagination-link" th:if='${i}!=${page.number}' th:href="@{${url}(page=${i})}">
+                        <span th:text='${i+1}'>1</span>
+                    </a>
+                </li>
+                <li th:class="${page.last} ? 'disabled':''" style="display:inline">
+                    <span class="pagination-link" th:if="${page.last}" disabled>&rsaquo;</span>
+                    <a class="pagination-link" th:if="${not page.last}" th:href="@{${url}(page=(${page.number}+1))}">&rsaquo;</a>
+                </li>
+                <li th:class="${page.last} ? 'disabled':''" style="display:inline">
+                    <span class="pagination-link" th:if="${page.last}" disabled>&raquo;</span>
+                    <a class="pagination-link" th:if="${not page.last}" th:href="@{${url}(page=(${page.totalPages}-1))}">&raquo;</a>
+                </li>
+            </ul>
+        </nav>
 	</div>
 	<script type="text/javascript" th:inline="javascript">
 		function edit(reservationId) {
