--- a/src/main/resources/templates/reservation/new.html
+++ b/src/main/resources/templates/reservation/new.html
@@ -30,7 +30,7 @@
 				<div class="field">
   					<label class="label">予約日</label>
   					<div class="control">
-						<input type="text" class="form-control input" id="reservedDate" name="reservedDate" style="width: 200px;" th:value="*{reservedDate}">
+						<input type="text" class="form-control input" id="reservedDate" name="reservedDate" style="width: 200px;" th:field="*{reservedDate}">
 					</div>
 				</div>
 				<div class="control">
