--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -4,15 +4,12 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css">
-<link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" media="screen, projection">
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
-<script type="text/javascript">
-
-</script>
+<link rel="stylesheet" type="text/css" th:href="@{/vendor/css/font-awesome.min.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/vendor/css/bulma.min.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/vendor/css/pikaday.css}">
+<script th:src="@{/vendor/js/moment-with-locales.js}"></script>
+<script th:src="@{/vendor/js/pikaday.js}"></script>
 <title th:replace="${title}">Staff Management System</title>
 </head>
 <body>
