--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/login.css"> 
-	<title>Spring Boot Example</title>
+	<title>Spring Boot Practice</title>
 </head>
 <body>
 	<div class="form-wrapper">
