--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -22,6 +22,8 @@
         	            <a class="navbar-item" href="#" th:href="@{/reservations}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/reservations') ? 'is-active':''}">Reservations</a>
     	                <a class="navbar-item" href="#" >Rooms</a>
     	                <a class="navbar-item" href="#" th:href="@{/users}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/users') ? 'is-active':''}">Users</a>
+    	                <a class="navbar-item" href="#" th:href="@{/orders}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/orders') ? 'is-active':''}">Orders</a>
+    	                <a class="navbar-item" href="#" th:href="@{/products}" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/products') ? 'is-active':''}">Products</a>
                 	</div>
 	            	<div class="navbar-end">
     	        		<div class="navbar-item has-dropdown is-hoverable">
