--- a/src/main/resources/templates/reservation/list.html
+++ b/src/main/resources/templates/reservation/list.html
@@ -48,11 +48,6 @@
 				<form th:object="${reservationsListForm}"
 			  		  th:action="@{'/reservations/search'}"
 		  			  th:method="get" name="editForm"></form>
-				<form th:object="${reservationsListForm}"
-			  		  th:action="@{'/reservations/search'}"
-		  			  th:method="post" name="deleteForm">
-		  			  <input type="hidden" id="reservationId" name="reservationId" value="" />
-		  		</form>
 		  	</div>
 		</div>
         <nav th:if="${page.totalPages > 0}" th:fragment='paginationbar' class="pagination" role="navigation" aria-label="pagination">
@@ -82,17 +77,39 @@
             </ul>
         </nav>
 	</div>
+	<div class="modal" id="modal">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+            <header class="modal-card-head is-danger">
+                <p class="modal-card-title">確認</p>
+            </header>
+            <section class="modal-card-body">
+                本当に削除してよろしいですか。
+            </section>
+            <footer class="modal-card-foot is-right">
+                <form th:action="@{'/reservations'}" method="POST" name="deleteForm">
+                    <button type="button" class="button is-info" id="delete-cancel-button">キャンセル</button>
+                    <button type="submit" class="button is-danger">はい</button>
+                    <input type="hidden" id="reservationId" name="reservationId" value="" />
+                </form>
+            </footer>
+        </div>
+    </div>
 	<script type="text/javascript" th:inline="javascript">
 		function edit(reservationId) {
 			document.editForm.action = '/reservations/' + reservationId + '/edit';
 			document.editForm.submit();
 		}
-		
 		function deleteReservation(reservationId) {
+			var m = document.getElementById('modal');
+			m.classList.add('is-active');
 			document.deleteForm.reservationId.value = reservationId;
 			document.deleteForm.action = '/reservations/cancel';
-			document.deleteForm.submit();
 		}
+		document.getElementById('delete-cancel-button').addEventListener('click', event => {
+			var m = document.getElementById('modal');
+			m.classList.remove('is-active');
+		});
 	</script>
 </body>
 </html>
