--- a/src/main/resources/templates/reservation/list.html
+++ b/src/main/resources/templates/reservation/list.html
@@ -32,7 +32,7 @@
 							<th>予約者</th>
 							<th>操作</th>
 						</tr>
-						<tr th:inline="text" th:each="reservation : ${reservations}">
+						<tr th:each="reservation : ${reservations}">
 							<td>[[${#temporals.format(reservation.reservedDate, 'yyyy/MM/dd')}]]</td>
 							<td>[[${reservation.startTime}]]-[[${reservation.endTime}]]</td>
 							<td>[[${reservation.meetingRoom.roomName}]]</td>
